<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_operation">Invalid operation</string>
    <string name="science_calculator">Science calculator</string>
    <string name="normal_calculator">Normal calculator</string>
    <string name="unit_calculator">Unit conversion</string>
    <string name="about">About</string>
    <string name="about_message">Author: Jim Frode Nilsen\nVersion: 0.1</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="action_exit">Exit</string>
    <string name="result_text">Result</string>
</resources>
